# dbx

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  DBX_PRODUCTIONIZATION_PLAN.md  DBX_TODO.md  Dockerfile  FAILING_TESTS.md  PUBLISHING.md  README.md  REDIS_PRIMITIVES_IMPLEMENTATION.md  ROADMAP.md  TESTING_WORKFLOW.md  docker-compose.test.yml  docker-compose.yml  env.example
.github/workflows/: README.md  api-tests-simple.yml  api-tests.yml  benchmark.yml  ci.yml  crates-tests-simple.yml  crates-tests.yml  docker-publish.yml  publish.yml  release.yml  rust-tests.yml  scheduled-tests.yml  security.yml  test.yml  typescript-tests.yml
.zed/: settings.json
@ts-depricated/: README.md  pnpm-lock.yaml
@ts-depricated/src/__tests__/: hash-tests.test.ts  sdk-client.test.ts
@ts-depricated/src/clients/: common.ts  string.ts
@ts-depricated/src/types/: common.ts  index.ts  set.ts
api/: .dockerignore  AGENT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  env.example
api/examples/: usage.rs  websocket_client.rs
api/src/: config.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  server.rs
api/src/constants/: api.rs  config.rs  database.rs  defaults.rs  errors.rs  mod.rs  redis_ws.rs  websocket.rs
api/src/constants/redis_ws/: admin.rs  batch.rs  hash.rs  key.rs  mod.rs  set.rs  string.rs  utility.rs
api/src/handlers/: mod.rs  redis.rs  redis_handlers.rs  websocket.rs
api/src/handlers/redis/: hash.rs  keys.rs  mod.rs  scripts.rs  set.rs  string.rs
api/src/handlers/redis_ws/: connection.rs  handler.rs  mod.rs
api/src/handlers/redis_ws/commands/: admin.rs  batch.rs  hash.rs  key.rs  mod.rs  set.rs  string.rs  utility.rs
api/src/handlers/websocket/: connection.rs  handler.rs  mod.rs
api/src/handlers/websocket/commands/: admin.rs  batch.rs  hash.rs  key.rs  mod.rs  set.rs  string.rs  utility.rs
api/src/routes/: common.rs  mod.rs  redis.rs  redis_ws.rs  websocket.rs
api/src/routes/common/: admin.rs  hash.rs  set.rs  string.rs
api/src/routes/redis/: admin.rs  hash.rs  set.rs  string.rs
api/src/routes/redis_ws/: admin.rs  hash.rs  mod.rs  set.rs  string.rs
api/tests/: api_tests.rs  basic_tests.rs  integration.rs  mod.rs
api/tests/common/: mod.rs
api/tests/redis/: batch.rs  concurrent.rs  errors.rs  hashes.rs  health.rs  keys.rs  mod.rs  scripts.rs  sets.rs  sorted_set.rs  string.rs  strings.rs
api/tests/redis_ws/: admin.rs  batch.rs  connection.rs  hash.rs  hashes.rs  mod.rs  sets.rs  sorted_set.rs  string.rs  strings.rs  utility.rs
bindings/redis_ts/: Cargo.toml  README.md  example.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
bindings/redis_ts/src/: lib.rs
bindings/redis_ts/src/__tests__/: README.md  basic.test.ts  http-client.test.ts  integration.test.ts  setup.ts  websocket-client.test.ts
bindings/redis_ts/src/__tests__/redis/: set.test.ts  string.test.ts
bindings/redis_ts/src/__tests__/redis_ws/: set.test.ts  string.test.ts
bindings/redis_ts/src/common/: mod.rs  set.rs
bindings/redis_ts/src/redis/: mod.rs  set.rs  string.rs
bindings/redis_ts/src/redis_ws/: set.rs  string.rs
crates/: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  lib.rs
crates/adapter/: Cargo.toml  README.md  mod.rs
crates/adapter/redis/: client.rs  examples.rs  mod.rs
crates/adapter/redis/primitives/: admin.rs  bitmap.rs  hash.rs  list.rs  mod.rs  set.rs  sorted_set.rs  stream.rs  string.rs
crates/adapter/src/: error.rs  lib.rs  mod.rs  traits.rs
crates/adapter/src/redis/: client.rs  mod.rs
crates/adapter/src/redis/primitives/: admin.rs  bitmap.rs  hash.rs  mod.rs  set.rs  sorted_set.rs  string.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  metadata.rs  query.rs  traits.rs
crates/core/src/registries/: mod.rs  postgres.rs  qdrant.rs  redis.rs
crates/redis/: Cargo.toml  README.md
crates/redis/src/: commands.rs  connection.rs  error.rs  hll.rs  lib.rs  pipeline.rs  prepared.rs  pubsub.rs  script.rs  stream.rs  tests.rs  transaction.rs
crates/redis_api/: Cargo.toml
crates/redis_api/src/: config.rs  lib.rs  main.rs  middleware.rs  models.rs  server.rs
crates/redis_api/tests/: mod.rs
crates/redis_client/: Cargo.toml  README.md
crates/redis_client/src/: client.rs  lib.rs
crates/redis_client/src/common/: client.rs  error.rs  mod.rs  set.rs  string.rs  types.rs
crates/redis_client/src/redis/: mod.rs  set.rs  string.rs
crates/redis_client/src/redis_ws/: mod.rs  set.rs  string.rs
crates/redis_client/tests/: README.md  mod.rs
crates/redis_client/tests/common/: mod.rs
crates/redis_client/tests/redis/: mod.rs  set.rs  string.rs
crates/redis_client/tests/redis_ws/: mod.rs  set.rs  string.rs
crates/redis_rs/: Cargo.toml  README.md
crates/redis_rs/examples/: basic_usage.rs
crates/redis_rs/src/: client.rs  error.rs  lib.rs  set.rs  string.rs  types.rs
crates/redis_rs/tests/: integration_test.rs
docs/: ROADMAP.md  docker.md  github-workflows.md  multi-platform-docker.md  package.json  pnpm-lock.yaml  vocs.config.ts
docs/deployment/: railway.md
docs/pages/: index.mdx
docs/pages/docs/: configuration.mdx  getting-started.mdx  index.mdx  installation.mdx
scripts/: README.md  check-status.sh  common.sh  config.sh  docker-setup.sh  publish-docker.sh  publish-npm.sh  publish-release.sh  publish.sh  quick-publish.sh  run.sh  test-sequential.sh  test-simple.sh  test-with-server.sh
sdks/redis-py/: README.md  __init__.py  client.py  pyproject.toml
sdks/redis-py/clients/: __init__.py  string.py
sdks/redis-py/tests/: __init__.py  test_string_client.py
static/: index.html
ts/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
ts/src/: client.ts  config.ts  index.ts  types.ts
ts/src/__tests__/: admin-tests.test.ts  sdk-client.test.ts  set-tests.test.ts  string-tests.test.ts
ts/src/clients/: admin.ts  base.ts  hash.ts  index.ts  set.ts  string.ts  websocket.ts
ts/src/examples/: basic-usage.ts  websocket-usage.ts
ts/src/types/: admin.ts  hash.ts  string.ts  websocket.ts
(+48 files in other folders)
