[workspace]
members = [
    "crates/core",
    "crates/redis"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Effortless Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/effortlesslabs/dbx"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3" 
