[workspace]
members = [
    "crates/adapter",
    "crates/redis_client",
    "crates/redis_api",
    "bindings/redis_ts"
]
resolver = "2"

[workspace.package]
version = "0.1.6"
edition = "2021"
authors = ["Effortless Labs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/effortlesslabs/dbx"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.23", features = ["tokio-comp"] }
mockall = "0.11"
async-trait = "0.1"
