[package]
name = "dbx-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "API layer for DBX database abstraction"

[[bin]]
name = "dbx-api"
path = "src/main.rs"

[dependencies]
dbx-crates = { path = "../crates", features = ["async", "connection-pool"] }
axum = { workspace = true }
tokio = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
hyper = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-tungstenite = "0.20"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
url = "2.4"
serde_json = "1.0"
futures-util = "0.3"

[[example]]
name = "websocket_client"
path = "examples/websocket_client.rs" 