[package]
name = "dbx-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Database adapters and utilities for DBX"

[lib]
name = "dbx_adapter"
path = "src/lib.rs"

[dependencies]
redis = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
async-trait = { workspace = true }
mockall = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
tokio.workspace = true
dotenv = "0.15"
ctor = "0.2"

[features]
default = []
async = ["tokio", "redis/tokio-comp"]
connection-pool = ["async"]
