[package]
name = "dbx_redis"
version = "0.1.0"
edition = "2021"
description = "Redis driver for DBX"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager", "aio", "script"] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
dbx_core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full", "test-util"] }
serde_json = "1.0.114"
test-log = "0.2.15"
futures = "0.3.30"
