[package]
name = "dbx_redis"
version = "0.1.0"
edition = "2021"
description = "Redis driver for DBX"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
nucleus = { path = "../core" }
deadpool-redis = { version = "0.10.0", features = ["rt_tokio_1"] }
backoff = { version = "0.4.0", features = ["tokio"] }
futures = "0.3.30"
test-log = { version = "0.2.14", optional = true }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full", "test-util"] }
serde_json = "1.0.114"
test-log = "0.2.14"
futures = "0.3.30"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
