[package]
name = "redis_client"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for DBX Redis API"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"
keywords = ["redis", "api", "sdk", "client"]
categories = ["api-bindings", "database"]

[features]
default = ["http", "string", "set"]
http = ["reqwest"]
websocket = ["tokio-tungstenite", "futures-util"]
string = []
set = []

[dependencies]
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.4"
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8" 