[package]
name = "redis_rs"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for DBX Redis API"
license = "MIT"
repository = "https://github.com/effortlesslabs/dbx"
keywords = ["redis", "api", "sdk", "client"]
categories = ["api-bindings", "database"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4" 