[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbx-redis-py"
version = "0.1.0"
description = "Python SDK for DBX Redis API"
authors = [
    { name="Effortless Labs" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]